example/static/css/specviz.css
body * {
    font-family: Overpass, sans-serif;
}
.lightgrey {
    background-color: #d7d7d7;
}
.lightgrey2 {
    background-color: #cccccc;
}
.theme--dark.v-divider {
    border-color: white !important;
    border-width: 1px;
}
.v-list.v-sheet.v-sheet--tile.v-list--disabled {
    background-color: #d7d7d7;
}
table tbody tr td {
    border-bottom: none !important;
}
table {
    table-layout: auto;
}

/* show vertical scrollbar */
::-webkit-scrollbar {
    -webkit-appearance: none;
    width: 7px;
}
::-webkit-scrollbar-thumb {
    border-radius: 4px;
    background-color: rgba(0, 0, 0, 0.5);
    box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
}
.portal-data-name {
    width: 120px;
    font-weight: bold;
    padding-left: 10px;
    padding-right: 4px;
}
.portal-data-value {
    min-width: 280px;
    padding-left: 4px;
}
.v-data-table td,
.v-data-table th {
    padding: 0 0;
}
.lightgrey .v-card__title {
    padding-top: 4px;
    padding-bottom: 4px;
    padding-left: 9px;
    font-weight: bold;
}
.target {
    color: #006281;
}
.v-card__title + .v-card__subtitle {
    margin-top: 0;
}
.v-card__subtitle {
    padding-left: 10px;
}

/* Safari 7.1+ */
_::-webkit-full-page-media,
_:future,
:root .section-title:after {
    padding-top: 0;
}
/*
Hovertext for fields in left panel
*/
td[alt]:after {
    opacity: 0;
    content: "";
}
td[alt]:hover:after {
    content: attr(alt);
    background-color: #444;
    color: white;
    padding-top: 0.2rem;
    padding-bottom: 0.2rem;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
    display: inline-block;
    opacity: 0.8;
    transition: opacity 0.5s 0.5s;
    border-radius: 4px;
}
.v-expansion-panel-header {
    padding: 0 0;
    background-color: #bbbbbb;
    color: #03475c;
    border-right: 2rem;
}
.v-expansion-panel-header--active {
    background-color: #03475c;
    color: white;
    border-radius: 0 !important;
}
.v-expansion-panel-content__wrap {
    padding: 0 0;
    background-color: #d7d7d7;
}

.v-expansion-panel-header .mdi-menu-down::before {
    color: #03475c;
}
.v-expansion-panel-header--active .mdi-menu-down::before {
    color: white;
}

.v-expansion-panel--active > .v-expansion-panel-header {
    min-height: 2rem;
}

.v-expansion-panel-content {
    background-color: #d7d7d7;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
}
.voila-connection {
    margin-top: 2rem;
    margin-left: 2rem;
    margin-right: 1rem;
    font-size: large;
}
.notebook-container {
    margin-left: auto;
    margin-right: auto;
}

.search-bar-text input {
    border-color: #c75109;
    color: white;
}
.v-input.search-bar-text.v-input--hide-details.v-input--is-label-active.v-input--is-dirty.theme--dark.v-text-field.v-text-field--is-booted.v-text-field--enclosed.v-text-field--outlined {
    background: #03475c !important;
}

.search-bar {
    background-color: #03475c;
}
.text-white input {
    color: white !important;
}

.theme--light.v-text-field--outlined:not(.v-input--is-focused):not(.v-input--has-state) > .v-input__control > .v-input__slot fieldset {
    color: white !important;
}

.theme--light.v-text-field--outlined > .v-input__control > .v-input__slot fieldset {
    color: white;
}

.theme--light.v-label {
    color: white;
}

.search-button.v-btn.v-btn--flat.v-btn--text.theme--light {
    color: white;
    background-color: #c75109;
    height: 54px;
    border-radius: 0;
}

.v-text-field--enclosed .v-input__append-inner,
.v-text-field--enclosed .v-input__append-outer,
.v-text-field--enclosed .v-input__prepend-inner,
.v-text-field--enclosed .v-input__prepend-outer,
.v-text-field--full-width .v-input__append-inner,
.v-text-field--full-width .v-input__append-outer,
.v-text-field--full-width .v-input__prepend-inner,
.v-text-field--full-width .v-input__prepend-outer {
    margin-top: auto;
    margin-bottom: auto;
}

.v-text-field .v-input__append-inner {
    margin-right: -10px;
    padding-right: 0;
}
.v-text-field {
    border-radius: 0;
}
.v-alert.voila-connection.v-sheet.theme--dark.error {
    background-color: #c75109;
}
main.v-content.main-container {
    padding-top: 0 !important;
}
main.v-content.search-bar-container {
    max-height: 128px;
}

#panel-collapse-bar {
    background-image: url(../images/expand-teal.svg);
    background-repeat: no-repeat;
    background-position: center;
    background-color: lightgrey;
    transform: rotate(180deg);
    cursor: pointer;
    max-width: 55px;
    flex: 10%;
}
#panel-expand-bar {
    background-image: url(../images/expand-teal.svg);
    background-repeat: no-repeat;
    background-position: center;
    background-color: lightgrey;
    cursor: pointer;
    width: 60px;
    height: calc(100vh - 128px);
}

